--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.10",
+    "@iconify/react": "^4.0.1",
     "@mui/material": "^5.11.2",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -13,13 +15,16 @@
     "axios": "^1.2.1",
     "env-cmd": "^10.1.0",
     "moment": "^2.29.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-hook-form": "^7.41.1",
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "simplebar-react": "^2.4.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
