UI done for 4 pages with API integration in 2 pages i.e Master page and leave management

--- a/package.json
+++ b/package.json
@@ -8,19 +8,24 @@
     "@hookform/resolvers": "^2.9.10",
     "@iconify/react": "^4.0.1",
     "@mui/material": "^5.11.2",
+    "@mui/x-date-pickers": "^5.0.12",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.2.1",
+    "chart.js": "^4.1.2",
     "env-cmd": "^10.1.0",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.5.2",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-hook-form": "^7.41.1",
     "react-hot-toast": "^2.4.0",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
